-fix- add margin top to hero x spacing from menu

--- a/css/main.css
+++ b/css/main.css
@@ -115,7 +115,11 @@ header {
     background-size: cover;
     background-position: center;
     height: 500px;
+    margin-top: 120px;
+    
 }
+
+
 
 .hero img {
     max-width: 50%;
